--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,31 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
+contourpy==1.0.6
+cycler==0.11.0
 docker-pycreds==0.4.0
 executing==1.2.0
+fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.29
 icecream==2.1.3
 idna==3.4
+kiwisolver==1.4.4
+matplotlib==3.6.2
 numpy==1.24.0
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
+packaging==22.0
 pathtools==0.1.2
 Pillow==9.3.0
 promise==2.3
 protobuf==4.21.12
 psutil==5.9.4
 Pygments==2.13.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
 PyYAML==6.0
 requests==2.28.1
 sentry-sdk==1.12.1
